--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  color: red;
+  text-align: center;
+}
+.nav{
+  padding: 10px;
+  text-align: center;
+}
+#featured-property{
+  text-align: center;
+}
+#details{
+  background: red;
+  display: flex;
+  justify-content: space-around;
+ 
+}
